tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__BasicAutomation-AAAAAAAAAAAAAAAAAAAADg==__CartModulesWoodC-AAAAAAAAAAAAAAAAAAAAcA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 112,
  "prerequisites": [
    111
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The basic wood cutter will break after a while, but you never have to replace it. It can easily be repaired with diamonds.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Cart Modules: Wood Cutter",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    111
  ],
  "rewards": [],
  "tasks": []
}
